[package]
name = "anchorvault-litesvm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
litesvm = "0.10.0"
sha2 = "0.10.9"
solana-instruction = "3.4.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.0.2"
